Dockerfile updated to support both development and production stages. Also included the icons for production to build properly

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,3 +11,9 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+<!-- This is here because a margin is being injected in production and we don't know why -->
+<style>
+  body {
+    margin: 0;
+  }
+</style>
