--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/rosalution.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rosalution %VITE_ROSALUTION_VERSION%</title>
+    <title>rosalution</title>
   </head>
   <body>
     <div id="app"></div>
